--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,6 +18,10 @@
         </p>
 
         <p>
+            Password <input type="password" name="password">
+        </p>
+
+        <p>
             <input type="submit">
         </p>
     </form>
