all functional and some css done

--- a/templates/all_movies.html
+++ b/templates/all_movies.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <h1>All Movies</h1>
-    <ul>
+    <ul class="movie-list">
         {% for movie in movies %}
             <li>
                 <a href="/movies/{{ movie.movie_id }}">
