--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>
+    <link rel="stylesheet" href="/static/styles.css">
+    <title class="title">
       {% block title %}{% endblock %}
     </title>
 
     {% block head %}{% endblock %}
   </head>
-  <body>
+  <body id="body">
 
     {% for msg in get_flashed_messages() %}
         <p class = "flash-msg">
