--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,13 @@
             {{ msg }}
         </p>
     {% endfor %}
-
+    <div class="nav">
+      <h1>NotIMDB</h1>
+      <a href="/">Home</a></li>
+      <a href="/movies">View all movies</a>
+      <a href="/users">View all users</a>
+      <h3>Rate DOZENS of movies!</h3>
+    </div>
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
