--- a/static/styles.css
+++ b/static/styles.css
@@ -45,3 +45,11 @@
     color:black;
     font-size: 20px;
 }
+
+
+.nav {background-color: rgba(255, 255, 255, 0.598);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 60px;
+}
