--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/static/styles.css">
     <title class="title">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+     <style> @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap'); </style>
       {% block title %}{% endblock %}
     </title>
 
@@ -18,10 +22,10 @@
         </p>
     {% endfor %}
     <div class="nav">
-      <h1>NotIMDB</h1>
-      <a href="/">Home</a></li>
-      <a href="/movies">View all movies</a>
-      <a href="/users">View all users</a>
+      <h1 id="logo">NotIMDb</h1>
+      <a class="nav-link" href="/">Home</a></li>
+      <a class="nav-link" href="/movies">View all movies</a>
+      <a class="nav-link" href="/users">View all users</a>
       <h3>Rate DOZENS of movies!</h3>
     </div>
     {% block body %}{% endblock %}
